Checkbox pour activée ou non le module de payement

--- a/templates/backOffice/default/paypal/module-configuration.html
+++ b/templates/backOffice/default/paypal/module-configuration.html
@@ -32,6 +32,9 @@
                                     close_url  = "{url path='/admin/modules'}"
                                     }
                                 </div>
+                                <div class="col-md-12">
+                                    {render_form_field form=$form field='paypal_payment_enabled'}
+                                </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-4">
