--- a/templates/backOffice/default/paypal/module-configuration.html
+++ b/templates/backOffice/default/paypal/module-configuration.html
@@ -64,6 +64,7 @@
                                         {render_form_field form=$form field="sandbox_merchant_id" value=$sandbox_merchant_id|default:null}
 
                                         {render_form_field form=$form field="allowed_ip_list" value={$allowed_ip_list|default:null}}
+                                        </div>
                                     </div>
                                     <div class="row">
                                         <div class="col-md-12 alert alert-info">
@@ -116,77 +117,11 @@
                                             <img src="{image file='assets/paypal_conf2.png' source="PayPal"}" alt="Payment configuration" class="img-responsive" />
                                         </div>
                                     </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        {render_form_field form=$form field="login" value=$login|default:null}
-                                        {render_form_field form=$form field="password" value=$password|default:null}
-                                        {render_form_field form=$form field="merchant_id" value=$merchant_id|default:null}
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-12 alert alert-info">
-                                        <h4 class="text-uppercase">
-                                            <span class="glyphicon glyphicon-info-sign"></span>&nbsp;{intl l="Help" d="paypal.bo.default"}&nbsp;:&nbsp;{intl l="Configuration" d="paypal.bo.default"}
-                                        </h4>
-                                        - {intl l="In your PayPal page API configuration" d="paypal.bo.default"}<br />
-                                        - {intl l="Click on the Live Button" d="paypal.bo.default"}<br />
-                                        <img src="{image file='assets/paypal_live_button.png' source="PayPal"}" alt="Payment configuration" class="img-responsive" /><br />
-                                        - {intl l="And configure it like the SandBox" d="paypal.bo.default"}<br />
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                                <h3>
-                                    <span class="label label-primary">3</span>
-                                    {intl l="Payment configuration" d="paypal.bo.default"}
-                                </h3>
-
-                                <div class="row">
-                                    <div class="tips__img">
-                                        <img src="{image file='assets/paypal_conf3.png' source="PayPal"}" alt="Payment configuration" class="img-responsive" />
-                                    </div>
-                                    <div class="col-md-12">
-                                        {custom_render_form_field form=$form field="method_paypal"}
-                                        <input type="checkbox" {form_field_attributes form=$form field="method_paypal"} {if $method_paypal|default:null}checked{/if}>
-                                        {$label}
-                                        {/custom_render_form_field}
-
-                                        {custom_render_form_field form=$form field="method_paypal_with_in_context"}
-                                        <input type="checkbox" {form_field_attributes form=$form field="method_paypal_with_in_context"} {if {$method_paypal_with_in_context|default:null}}checked{/if}>
-                                        {$label}
-                                        {/custom_render_form_field}
-
-                                        {custom_render_form_field form=$form field="method_express_checkout"}
-                                        <input type="checkbox" {form_field_attributes form=$form field="method_express_checkout"} {if $method_express_checkout|default:null}checked{/if}>
-                                        {$label}
-                                        {/custom_render_form_field}
-
-                                        {custom_render_form_field form=$form field="method_credit_card"}
-                                        <input type="checkbox" {form_field_attributes form=$form field="method_credit_card"} {if $method_credit_card|default:null}checked{/if}>
-                                        {$label}
-                                        {/custom_render_form_field}
-
-                                        <div class="well well-sm alert-danger">
-                                            <span class="glyphicon glyphicon-info-sign"></span>
-                                            {intl d='paypal.bo.default' l='This method works only with PayPal PRO UK account. Please contact PayPal to upgrade your account if you need this service. For more informations, go <a target="_blank" href="https://developer.paypal.com/docs/integration/direct/payments/accept-credit-cards/">here</a>'}
-                                        </div>
-
-                                        {custom_render_form_field form=$form field="method_planified_payment"}
-                                        <input type="checkbox" {form_field_attributes form=$form field="method_planified_payment"} {if $method_planified_payment|default:null}checked{/if}>
-                                        {$label}
-                                        {/custom_render_form_field}
-
-                                        <div class="well well-sm alert-danger">
-                                            <span class="glyphicon glyphicon-info-sign"></span>
-                                            <strong>{intl d='paypal.bo.default' l='This method use PayPal webhooks and works only in HTTPS !'}</strong>
-                                        </div>
-                                    </div>
                                     <div class="row">
                                         <div class="col-md-12">
-                                            {render_form_field form=$form field="login" value=$login}
-                                            {render_form_field form=$form field="password" value=$password}
-                                            {render_form_field form=$form field="merchant_id" value=$merchant_id}
+                                            {render_form_field form=$form field="login" value=$login|default:null}
+                                            {render_form_field form=$form field="password" value=$password|default:null}
+                                            {render_form_field form=$form field="merchant_id" value=$merchant_id|default:null}
                                         </div>
                                     </div>
                                     <div class="row">
@@ -213,23 +148,23 @@
                                         </div>
                                         <div class="col-md-12">
                                             {custom_render_form_field form=$form field="method_paypal"}
-                                            <input type="checkbox" {form_field_attributes form=$form field="method_paypal"} {if $method_paypal}checked{/if}>
+                                            <input type="checkbox" {form_field_attributes form=$form field="method_paypal"} {if isset($method_paypal) && $method_paypal}checked{/if}>
                                             {$label}
                                             {/custom_render_form_field}
 
                                             <div class="hidden">
                                                 {custom_render_form_field form=$form field="method_paypal_with_in_context"}
-                                                <input type="checkbox" {form_field_attributes form=$form field="method_paypal_with_in_context"} {if $method_paypal_with_in_context}checked{/if}>
+                                                <input type="checkbox" {form_field_attributes form=$form field="method_paypal_with_in_context"} {if isset($method_paypal_with_in_context) && $method_paypal_with_in_context}checked{/if}>
                                                 {$label}
                                                 {/custom_render_form_field}
 
                                                 {custom_render_form_field form=$form field="method_express_checkout"}
-                                                <input type="checkbox" {form_field_attributes form=$form field="method_express_checkout"} {if $method_express_checkout}checked{/if}>
+                                                <input type="checkbox" {form_field_attributes form=$form field="method_express_checkout"} {if isset($method_express_checkout) && $method_express_checkout}checked{/if}>
                                                 {$label}
                                                 {/custom_render_form_field}
 
                                                 {custom_render_form_field form=$form field="method_credit_card"}
-                                                <input type="checkbox" {form_field_attributes form=$form field="method_credit_card"} {if $method_credit_card}checked{/if}>
+                                                <input type="checkbox" {form_field_attributes form=$form field="method_credit_card"} {if isset($method_credit_card) && $method_credit_card}checked{/if}>
                                                 {$label}
                                                 {/custom_render_form_field}
 
@@ -239,7 +174,7 @@
                                                 </div>
 
                                                 {custom_render_form_field form=$form field="method_planified_payment"}
-                                                <input type="checkbox" {form_field_attributes form=$form field="method_planified_payment"} {if $method_planified_payment}checked{/if}>
+                                                <input type="checkbox" {form_field_attributes form=$form field="method_planified_payment"} {if isset($method_planified_payment) && $method_planified_payment}checked{/if}>
                                                 {$label}
                                                 {/custom_render_form_field}
 
